# cascade

./: .gitattributes  .gitignore  DESIGN.md  README.md  docker-compose.yml  netlify.toml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
backend/app/: config.py  db.py  enums.py  logging_config.py  main.py  models.py  schemas.py  seed.py
backend/app/api/: auth.py  deps.py  keys.py  orgs.py  public.py  runs.py  workflows.py
backend/app/core/: crypto.py  security.py
backend/app/services/: engine.py  llm.py  rate_limit.py  runner.py  templating.py
backend/app/worker/: __init__.py  __main__.py
backend/migrations/: env.py
backend/migrations/versions/: 953ae77b8e8b_initial_schema.py
backend/tests/: conftest.py  test_engine.py  test_integration.py  test_security_crypto.py  test_templating.py
docs/: DEPLOY.md  UPWORK_PROPOSAL.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/.netlify/: netlify.toml
frontend/src/: App.tsx  RunSteps.tsx  api.ts  auth.tsx  components.tsx  hooks.ts  index.css  main.tsx  types.ts
frontend/src/pages/: Dashboard.tsx  Landing.tsx  Login.tsx  Register.tsx  RunView.tsx  WorkflowEditor.tsx
